<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/intro3_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".intro.fragments.Intro1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu_medium"
        android:gravity="center"
        android:text="@string/before_word"
        android:textColor="@color/text_color"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@id/intro3_banner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/intro3_banner"
        android:layout_width="325dp"
        android:layout_height="270dp"
        android:layout_marginTop="75dp"
        android:contentDescription="@string/intro3_banner_cd"
        android:elevation="2dp"
        android:src="@drawable/il_moderators"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/intro3_headline"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/ubuntu"
        android:gravity="center"
        android:text="@string/intro3_headline"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intro3_banner" />

    <TextView
        android:id="@+id/intro3_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/ubuntu_light_italic"
        android:gravity="center"
        android:text="@string/intro3_body"
        android:textColor="@color/text_color"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intro3_headline" />


    <ImageButton
        android:id="@+id/intro3_button"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/ic_check_circle_violet"
        android:contentDescription="@string/intro3_button_cd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intro3_body" />


</androidx.constraintlayout.widget.ConstraintLayout>