<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="25dp"
        android:layout_height="28dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/ic_arrow_left"
        android:contentDescription="@string/back_button_cd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/ubuntu_medium"
        android:gravity="center"
        android:text="@string/welcome_back_friend"
        android:textColor="@color/text_color"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.362"
        app:layout_constraintStart_toEndOf="@+id/back_button"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/login_banner"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:layout_marginTop="75dp"
        android:contentDescription="@string/login_banner_cd"
        android:elevation="2dp"
        android:src="@drawable/ic_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <fragment
        android:id="@+id/signup_emailFragment"
        android:name="aletheia.alexandru.balan.auth.fragments.EmailInputFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        app:layout_constraintBottom_toTopOf="@+id/signup_passwordFragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_banner" />

    <fragment
        android:id="@+id/signup_passwordFragment"
        android:name="aletheia.alexandru.balan.auth.fragments.PasswordInputFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_emailFragment" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_button_background_main"
        android:fontFamily="@font/ubuntu_medium"
        android:gravity="center"
        android:text="@string/log_in"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/login_facebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_passwordFragment" />

    <TextView
        android:id="@+id/or_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/ubuntu"
        android:gravity="center"
        android:text="@string/or_sign_in_with"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

    <ImageButton
        android:id="@+id/login_google"
        android:layout_width="45dp"
        android:layout_height="47dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/ic_google"
        android:contentDescription="@string/google_button_cd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="5"
        app:layout_constraintStart_toEndOf="@+id/login_facebook"
        app:layout_constraintTop_toBottomOf="@+id/or_tv" />

    <ImageButton
        android:id="@+id/login_facebook"
        android:layout_width="45dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/ic_facebook_square"
        android:contentDescription="@string/facebook_button_cd"
        app:layout_constraintEnd_toStartOf="@+id/login_google"
        app:layout_constraintHorizontal_bias="5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/or_tv" />


</androidx.constraintlayout.widget.ConstraintLayout>