<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/intro_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".intro.fragments.Intro1">

    <ImageView
        android:id="@+id/intro1_banner"
        android:layout_width="325dp"
        android:layout_height="270dp"
        android:layout_marginTop="75dp"
        android:contentDescription="@string/intro1_image_cd"
        android:elevation="2dp"
        android:src="@drawable/il_news"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/intro1_headline"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/parisienne"
        android:gravity="center"
        android:shadowColor="#40000000"
        android:shadowDx="4"
        android:shadowDy="4"
        android:shadowRadius="6"
        android:text="@string/aletheia"
        android:textColor="@color/text_color"
        android:textSize="46sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intro1_banner" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/cantarell"
        android:gravity="center"
        android:text="@string/intro1_textBody"
        android:textColor="@color/text_color"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intro1_headline" />


    <ImageButton
        android:id="@+id/intro1_button"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/ic_arrow_alt_circle_right"
        android:contentDescription="@string/intro1_button_cd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


</androidx.constraintlayout.widget.ConstraintLayout>