<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/signup_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="18dp"
        android:contentDescription="@string/signup_banner_cd"
        android:src="@drawable/ic_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <fragment
        android:id="@+id/signup_emailFragment"
        android:name="aletheia.alexandru.balan.auth.fragments.EmailInputFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="36dp"
        app:layout_constraintBottom_toTopOf="@+id/signup_passwordFragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_banner" />

    <TextView
        android:id="@+id/warning_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/type_your_password"
        android:fontFamily="@font/cantarell"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/signup_passwordFragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_emailFragment" />

    <fragment
        android:id="@+id/signup_passwordFragment"
        android:name="aletheia.alexandru.balan.auth.fragments.PasswordInputFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="9dp"
        app:layout_constraintBottom_toTopOf="@+id/signup_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/warning_text" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="72dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/rounded_button_background_accent"
        android:fontFamily="@font/cantarell_bold"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textColor="@color/text_color_white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/facebook_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_passwordFragment" />

    <ImageButton
        android:id="@+id/signup_google"
        android:layout_width="45dp"
        android:layout_height="47dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/ic_google"
        android:contentDescription="@string/google_button_cd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="5"
        app:layout_constraintStart_toEndOf="@+id/facebook_container"
        app:layout_constraintTop_toBottomOf="@+id/signup_button" />

    <FrameLayout
        android:id="@+id/facebook_container"
        android:layout_width="45dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toStartOf="@+id/signup_google"
        app:layout_constraintHorizontal_bias="5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_button">

        <com.facebook.login.widget.LoginButton
            android:id="@+id/signup_facebook"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

        </com.facebook.login.widget.LoginButton>

        <ImageButton
            android:id="@+id/custom_facebook_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ic_facebook_square"
            android:contentDescription="@string/facebook_button_cd" />

    </FrameLayout>

    <Button
        android:id="@+id/goto_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:background="@drawable/rounded_button_background_main"
        android:fontFamily="@font/cantarell_bold"
        android:text="@string/i_already_have_an_account"
        android:textAllCaps="false"
        android:textColor="@color/text_color_white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_google" />

</androidx.constraintlayout.widget.ConstraintLayout>
