<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signup_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.fragments.SignupFragment">

    <TextView
        android:id="@+id/signup_title"
        style="@style/Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_l"
        android:text="@string/nice_to_meet_you"
        app:layout_constraintBottom_toTopOf="@+id/signup_banner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/signup_banner"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_m"
        android:contentDescription="@string/signup_banner_cd"
        android:src="@drawable/il_signup"
        app:layout_constraintBottom_toTopOf="@id/input_fields"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_title" />

    <androidx.fragment.app.FragmentContainerView
        android:transitionName="authInputs"
        android:id="@+id/input_fields"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_m"
        app:layout_constraintBottom_toBottomOf="@id/goto_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_banner"
        tools:layout="@layout/fragment_auth_inputs" />

    <Button
        android:id="@+id/goto_login"
        style="@style/NormalButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_il"
        android:layout_marginTop="@dimen/margin_m"
        android:layout_marginBottom="@dimen/margin_m"
        android:backgroundTint="@color/brand_color"
        android:background="@drawable/rounded_button_background_main"
        android:text="@string/i_already_have_an_account"
        android:textColor="@color/text_color_white"
        android:textSize="@dimen/small_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_fields" />

</androidx.constraintlayout.widget.ConstraintLayout>